# workflowlib

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  changelog.md  environment.yml  pyproject.toml
src/rdmlibpy/: __init__.py  _typing.py  process.py  workflow.py
src/rdmlibpy/dataframes/: __init__.py  io.py  transforms.py
src/rdmlibpy/loaders/: __init__.py  hiden_rga.py
src/rdmlibpy/loaders/channel/: eurotherm.py  tclogger.py
src/rdmlibpy/metadata/: __init__.py  _metadata.py  _queries.py  metadata.py  queries.py  resolvers.py
src/rdmlibpy/serializers/: file_cache.py  pandas_dataframe.py
src/workflowlib/: __init__.py  _typing.py  base.py  process.py  registry.py  workflow.py
src/workflowlib/dataframes/: __init__.py  io.py  loaders.py  selection.py  writers.py
src/workflowlib/loaders/: __init__.py  csv_loader.py  hiden_rga.py  mks_ftir.py  mks_ftir_loader.py
src/workflowlib/loaders/channel/: eurotherm.py  tclogger.py
src/workflowlib/serializers/: pandas_dataframe.py
src/workflowlib/transforms/: __init__.py  dataframe.py
tests/: conftest.py  test_loader.py  test_process.py  test_workflow.py
tests/data/ChannelV2TCLog/: 2024-01-16T10-05-21.csv  2024-01-16T11-26-54.csv
tests/data/dataframe/: test_data.csv  test_data.hd5
tests/data/eurotherm/: 20240118T084901.txt  20240118T090901.txt
tests/data/eurotherm/subfolder/b/: 20240118T085901.txt
tests/data/eurotherm/subfolder/d/: 20240118T091901.txt
tests/data/eurotherm/v1.1/: 20240621T112547.txt
tests/data/hiden/: ae03_20240123_nh3lo_n2_2nlpm_f06_test1.csv  ae11_nh3x_n2_2nlpm_allars7-9_f02.csv  ae11_nh3x_n2_2nlpm_allars7-9_f06.csv
tests/data/metadata/: 2023-10-10.yaml  2023-10-11.yaml
tests/data/mks_ftir/: 2024-01-16-conc.prn
tests/dataframes/: test_io.py  test_loaders.py  test_selection.py  test_transforms.py  test_writers.py
tests/loaders/: test_csv_loader.py  test_hiden_rga.py  test_mks_ftir.py
tests/loaders/channel/: test_eurotherm.py  test_tclogger.py
tests/metadata/: test_metdata_access.py  test_metdata_query.py  test_resolvers.py
tests/serializers/: test_file_chache.py  test_pandas_dataframe.py
tests/transforms/: test_dataframe.py  test_selection.py
workflowlib/: base.py  registry.py
workflowlib/loaders/: __init__.py  csv_loader.py  tclogger_loader.py
workflowlib/serializers/: __init__.py  file_cache.py  pandas_dataframe.py
workflowlib/transforms/: dataframe.py  selection.py
