[tool.poetry]
name = "workflowlib"
version = "0.1.0"
description = ""
authors = ["thaeber <thomas.haeber@kit.edu>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
pandas = "^2.2"
numpy = "^1.26"
pint-pandas = "^0.5"
python-dateutil = "^2.8"
tables = "^3.9.2"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
