[tool.poetry]
name = "rdmlibpy"
version = "0.1.11"
description = ""
authors = ["thaeber <thomas.haeber@kit.edu>"]
readme = "README.md"
packages = [
    { include = "rdmlibpy", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5"
pandas = "^2.2"
numpy = "^1.26"
pint-pandas = "^0.5"
python-dateutil = "^2.8"
tables = "^3.9.2"
omegaconf = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.2"
bump-my-version = "^0.20.0"
pandas-stubs = "^2.2.1.240316"
pytest-watcher = "^0.4.2"
git-changelog = "^2.5.2"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpversion]
current_version = "0.1.11"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = true
ignore_missing_version = false
ignore_missing_files = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = '''^version\s*=\s*([\'\"\`])({current_version})\1'''
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "src/rdmlibpy/__init__.py"

[tool.git-changelog]
convention = "angular"
in-place = false
output = "changelog.md"
provider = "github"
sections = "fix,feat,refactor,chore,style,build"
template = "angular"

[tool.black]
skip-string-normalization=true
